debug fixed background position on mobile

--- a/src/styles/sass.scss
+++ b/src/styles/sass.scss
@@ -820,14 +820,31 @@ footer {
   }
 }
 
+// #background {
+//   background-image: url(/public/img/bg_conifer1.jpg);
+//   transition: background-image 0.5s ease-in-out;
+//   background-position: center;
+//   background-attachment: fixed;
+//   background-size: cover;
+//   background-repeat: no-repeat;
+//   min-height: calc(var(--vh, 1vh) * 100);
+// }
+
 #background {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100vh;
   background-image: url(/public/img/bg_conifer1.jpg);
-  transition: background-image 0.5s ease-in-out;
-  background-position: center;
-  background-attachment: fixed;
   background-size: cover;
-  background-repeat: no-repeat;
-  min-height: calc(var(--vh, 1vh) * 100);
+  z-index: -100;
+  // transition: background-image 0.5s ease-in-out;
+  // background-position: center;
+  // background-attachment: fixed;
+  // background-size: cover;
+  // background-repeat: no-repeat;
+  // min-height: calc(var(--vh, 1vh) * 100);
 }
 
 .background-fade-in {
